# convex

./: .gitignore  README.md  convex.cabal  default.nix  dependent-convex-optimization.cabal  shell.nix
agda-comparison/: LinearMap.agda  VectorList.agda  convex.agda-lib
jupyter/: jupyter.nix  lp.ipynb  plot-test.ipynb  prox.ipynb  quadratic.ipynb
jupyter/jupyterlab/extensions/: jupyterlab_bokeh-0.6.3.tgz
jupyter/jupyterlab/static/: 1.807a410e462d1b0d2121.js  index.html  index.out.js  main.f21e1a48e5718b9732ba.js  package.json  vendors~vega.1407fe1a8374499f77fe.js
main/: Main.hs
nix/: doctest.nix  lens.nix  nixpkgs.nix  profunctors.nix
src/ControlSystems/DynamicSystems/: Conversions.hs
src/ControlSystems/DynamicSystems/Conversions/: Static.hs
src/Data/: Fin.hs
src/Numeric/: UnitaryRational.hs
src/Numeric/LinearAlgebra/: Combinators.hs  MatrixFree.hs
src/Numeric/LinearAlgebra/MatrixFree/: Combinators.hs
src/Numeric/LinearAlgebra/Static/: RList.hs  Util.hs
src/Numeric/LinearProgramming/L1/: Static.hs
src/Numeric/LinearProgramming/LP/: Static.hs
src/Numeric/Proximal/: Static.hs
src/Numeric/QuadraticProgramming/: PQP.hs
src/Numeric/QuadraticProgramming/PQP/: Static.hs
