cabal-version:       2.2

name:                convex
version:             0.1.0.0
synopsis:            Dependently typed convex optimization

homepage:            https://github.com/ryanorendorff/convex
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ryan Orendorff
maintainer:          ryan@orendorff.io
copyright:           2020 Ryan Orendorff
                     
category:            Math

extra-source-files:  README.md

library
  -- Modules exported by the library.
  exposed-modules:
    Data.Fin
    Numeric.UnitaryRational
    Numeric.LinearAlgebra.MatrixFree
    Numeric.LinearAlgebra.Static.Util
    Numeric.LinearAlgebra.Static.RList
    Numeric.LinearAlgebra.MatrixFree.Combinators
    Numeric.LinearAlgebra.Combinators
    Numeric.LinearProgramming.L1.Static
    Numeric.LinearProgramming.LP.Static
    Numeric.QuadraticProgramming.PQP.Static
    Numeric.Proximal.Static
    ControlSystems.DynamicSystems.Conversions
    ControlSystems.DynamicSystems.Conversions.Static

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:
      ghc-typelits-natnormalise
    , ghc-typelits-knownnat
    , gnuplot
    , hmatrix
    , hmatrix-glpk
    , vector
    , random
    , utility-ht
    , base >=4.10.1.0 
                

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wno-orphans


executable convex-example
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:
      ghc-typelits-natnormalise
    , ghc-typelits-knownnat
    , gnuplot
    , hmatrix
    , hmatrix-glpk
    , vector
    , random
    , convex
    , base >=4.10.1.0

  -- Directories containing source files.
  hs-source-dirs:      main

  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -threaded
